--- a/app/src/main/res/layout/activity_descriptionof_ghtas.xml
+++ b/app/src/main/res/layout/activity_descriptionof_ghtas.xml
@@ -65,7 +65,7 @@
             android:id="@+id/t3"/>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_below="@+id/t3"
             android:background="#ffffff"
