--- a/app/src/main/res/layout/activity_description2.xml
+++ b/app/src/main/res/layout/activity_description2.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:id="@+id/t3"
-            android:text="Is the Ghat Flooded ?"
+            android:text="Is the Ghat Flooded:"
             android:layout_below="@+id/t2"/>
         <TextView
             android:layout_width="match_parent"
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:id="@+id/t5"
-            android:text="Sandhya Aarti Duration "
+            android:text="Sandhya Aarti Duration:"
             android:layout_below="@+id/t4"/>
         <TextView
             android:layout_width="match_parent"
@@ -68,19 +68,44 @@
             android:layout_height="40dp"
             android:id="@+id/t10"
             android:layout_below="@+id/t9"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/t11"
+            android:text="Special Religious Events"
+            android:layout_below="@id/t10"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/t12"
+            android:layout_below="@+id/t11"/>
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:id="@+id/b"
-            android:layout_below="@+id/t10"
+            android:layout_below="@+id/t12"
             android:text="Back"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/r"
-        android:layout_below="@+id/b"
-        android:text="Review" />
 
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/r"
+            android:layout_below="@+id/b"
+            android:text="Review" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/rl"
+            android:layout_below="@+id/r"
+            android:text="list of review givers" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/nh"
+            android:layout_below="@+id/rl"
+            android:text="Nearby Hospitals" />
 
 
 
