--- a/app/src/main/res/layout/activity_donation.xml
+++ b/app/src/main/res/layout/activity_donation.xml
@@ -34,52 +34,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/e3"
-            android:hint="Enter Your Card Number"
             android:inputType="number"
+            android:hint="Enter Your Phone Number"
             android:layout_below="@+id/e2"/>
-
-        <TextView
-            android:id="@+id/t1"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_below="@+id/e3"
-            android:layout_marginTop="12dp"
-            android:text="Expiry Date" />
-
-        <Spinner
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/e4"
-            android:layout_below="@+id/t1"/>
-        <Spinner
+            android:hint="Enter Comments(If Any)"
+            android:layout_below="@+id/e3"/>
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/e5"
+            android:layout_height="300dp"
+            android:id="@+id/im"
+            android:src="@drawable/dp"
             android:layout_below="@+id/e4"/>
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/e6"
-            android:hint="Enter CVV"
-            android:inputType="numberPassword"
-            android:layout_below="@+id/e5"/>
-        <EditText
+            android:text="OR"
+            android:id="@+id/or"
+            android:textAlignment="center"
+            android:layout_below="@+id/im"
+            android:gravity="center_horizontal" />
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/e7"
-            android:hint="Enter Amount"
-            android:inputType="number"
-            android:layout_below="@+id/e6"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/e8"
-            android:hint="Enter Name on Card"
-            android:layout_below="@+id/e7"/>
+            android:text="VPA:cleangangafund@SBI"
+            android:layout_below="@+id/or"
+            android:textAlignment="center"
+            android:id="@+id/vpa"
+            android:gravity="center_horizontal" />
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/e8"
+            android:layout_below="@+id/vpa"
             android:id="@+id/b1"
             android:layout_centerInParent="true"
             android:text="PAY"/>
