--- a/app/src/main/res/layout/activity_description2.xml
+++ b/app/src/main/res/layout/activity_description2.xml
@@ -112,7 +112,12 @@
             android:id="@+id/bt"
             android:layout_below="@+id/nh"
             android:text="Book Tent" />
-
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/p"
+            android:layout_below="@+id/nh"
+            android:text="Text Nearby Police Station"/>
 
     </RelativeLayout>
 
